test/parse/relaxed/bad/maxvarexceededinvline2.sol
s SATISFIABLE
c this will becomme really to big
v 1
v 30000000000000000000000
v 3
v 0
